# sqlalchemy-diff

./: .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini  tox.toml
.github/workflows/: ci.yml
config/: config.yaml
docs/: Makefile  make.bat
docs/source/: conf.py  full_example.rst  index.rst
docs/testing/: test_example.py  test_unittest.py
sqlalchemydiff/: __init__.py  comparer.py  pyfixtures.py  util.py
src/sqlalchemydiff/: __init__.py  comparer.py  connection.py
src/sqlalchemydiff/inspection/: __init__.py  base.py  compat.py  exceptions.py  ignore.py  inspectors.py  mixins.py
test/: __init__.py  conftest.py
test/endtoend/: conftest.py  enumadaptor.py  models_left.py  models_right.py  test_example.py  test_unittest.py
test/unit/: test_comparer.py  test_util.py
tests/: __init__.py  base.py  conftest.py  test_comparer.py  test_ignore.py  util.py
tests/models/: models_one.py  models_two.py
tests/test_inspectors/: test_bad_inspector.py  test_check_constraints.py  test_columns.py  test_enums.py  test_foreign_keys.py  test_indexes.py  test_primary_keys.py  test_readme_examples.py  test_table_names.py  test_unique_constraints.py
